# llsd

./: .gitignore  BASELINE_COMPLETE.md  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  README.md  pyproject.toml  test_phase1.py
.github/workflows/: ci.yml
data/: contrastive_pairs.jsonl
examples/: README.md
scripts/: demo.py  evaluate_basic.py  extract_vectors.py
src/llsd/: __init__.py  dataset.py  extraction.py  hooks.py  model.py  steering.py  utils.py
vectors/: README.md
